# Network-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  programme  sae_s21
S21/: main.c  switch.h  test_ip
S21/include/: adresse.h  graphe.h  reseau.h  station.h  switch.h
S21/src/: adresse.c  graphe.c
include/: adresse.h  algos.h  config.h  graphe.h  reseau.h  station.h  stp.h  switch.h  tram.h  trame.h
src/: adresse.c  algos.c  config.c  graphe.c  reseau.c  station.c  stp.c  switch.c  tram.c  trame.c  utils.c
